# dagster-deployment

./: Dockerfile  Dockerfile.dagster  Dockerfile.worker  K8S_SETUP.md  MIGRATION.md  README.md  build.sh  celery_config.yaml  cluster-setup.sh  compose.yaml  connect_test.py  dagster.yaml  deploy.sh  docker-compose.yml  env.sh  logs.sh  requirements.txt  start.sh  stop.sh  workspace.yaml
code/: pyproject.toml  start.sh
code/code/: main.py
daemon/: pyproject.toml  start.sh
dqueue_dagster/: definitions.py  job_configs.py  jobs.py  sensors.py
k8s/: code.yaml  configmap.yaml  daemon.yaml  dask.yaml  postgres.yaml  role.yaml  secret.yaml  web.yaml
tests/: test_jobs.py
web/: pyproject.toml  start.sh
web/.telemetry/: id.yaml
web/history/: runs.db
web/history/runs/: index.db
web/schedules/: schedules.db
worker/: README.md  pyproject.toml  start.sh  test_connect.py
