[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Chris Hayen <chayen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dagster = "^1.10.21"
dagster-postgres = "^0.26.21"
dagster-dask = "^0.26.21"
distributed = "^2024.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
